# A2A-Orchestrator

./: .gitignore  LICENSE  README.md  a2a_server_manager.py  logger.py  pyproject.toml  requirements.txt  settings.py  test_a2a_server.py
a2a_server/agent_cards/: math_agent_card.json  orchestrator_agent_card.json  weather_agent_card.json
a2a_server/agents/: __init__.py
a2a_server/agents/math_agent_server/: __init__.py  __main__.py  math_agent.py  tools.py
a2a_server/agents/orchestrator_agent_server/: __init__.py  __main__.py  orchestrator_agent.py
a2a_server/agents/weather_agent_server/: __init__.py  __main__.py  weather_agent.py
a2a_server/common/: agent_card_loader.py  base_agent.py  base_agent_executor.py  base_agent_server.py  models.py  prompts.py  remote_agent_connection.py
a2a_server/mcp/: servers.json
a2a_server/mcp/servers/: weather.py
